--- a/www/style_480.css
+++ b/www/style_480.css
@@ -16,6 +16,6 @@ ul.langSelect{display: none;}
 
 /*----------------------------------------*/
 /*                CONTENT                 */
-p.info{display: none;}
+p.info, span.example{display: none;}
 /*                CONTENT                 */
 /*----------------------------------------*/
