--- a/www/style.css
+++ b/www/style.css
@@ -165,12 +165,15 @@ div#header{
 	height: 65px;
 }
 div#footer{
-	max-width: 416px;
-	float:right;
 	width:100%;
-	border-top: 2px solid #999;
-	margin: 0 27px;
+}
+
+div#footer p {
+  margin: 0px 27px;
 	padding: 6px 5px;
+}
+div.subitem {
+	border-bottom: 2px solid #999;
 }
 body.storing div#footer{
 	border: none;
@@ -185,8 +188,8 @@ body.storing div#footer{
 ul.langSelect{
   position: absolute;
   right:0px;
-  top:30px;
-	width: 100px;
+  top:35px;
+	width: auto;
 	list-style: none;
 	margin: 0 20px 0 0;
 	padding: 5px;
