--- a/www/style.css
+++ b/www/style.css
@@ -157,7 +157,7 @@ div#content, div#wrapper, div#header{
 
 div#wrapper{
   max-width:480px;
-	margin: 10px auto 0 auto;
+	margin: 0px auto 0 auto;
 	float: none;
 }
 div#header{
@@ -208,8 +208,9 @@ h1.mainTitle{
 	margin: 20px 0 20px 20px;
 }
 div#header img{
-	width: 128px;
-	margin: 0 0 0 20px;
+	width: 200px;
+	margin: 10px 0 0 10px;
+	left: 50%;
 }
 /*                 HEADER                 */
 /*----------------------------------------*/
